--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
+        "@google/generative-ai": "^0.24.1",
         "@handsontable/react": "^16.1.1",
         "@handsontable/react-wrapper": "^16.1.1",
         "@headlessui/react": "^2.2.0",
@@ -37,6 +38,7 @@
         "@mui/material": "^7.3.2",
         "@mui/x-data-grid": "^8.11.1",
         "@radix-ui/react-accordion": "^1.2.12",
+        "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -58,17 +60,20 @@
         "@tanstack/react-query": "^5.87.1",
         "@tanstack/react-table": "^8.21.3",
         "@types/chart.js": "^2.9.41",
+        "@types/lodash": "^4.17.20",
         "@types/lodash.debounce": "^4.0.9",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@types/ziggy-js": "^1.3.3",
+        "@uidotdev/usehooks": "^2.4.1",
         "@vitejs/plugin-react": "^4.7.0",
         "chart.js": "^4.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
-        "filepond": "^4.32.9",
+        "filepond": "^4.32.10",
+        "filepond-plugin-file-validate-size": "^2.2.8",
         "filepond-plugin-file-validate-type": "^1.2.9",
         "filepond-plugin-image-crop": "^2.0.6",
         "filepond-plugin-image-exif-orientation": "^1.0.11",
@@ -80,6 +85,7 @@
         "html2canvas": "^1.4.1",
         "hyperformula": "^3.0.1",
         "jspdf": "^3.0.3",
+        "lodash": "^4.17.21",
         "lodash.debounce": "^4.0.8",
         "lucide-react": "^0.475.0",
         "number-to-words": "^1.2.4",
@@ -99,6 +105,7 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
+        "use-debounce": "^10.0.6",
         "vite": "^7.0.4",
         "ziggy-js": "^2.6.0"
     },
