--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "laravel/wayfinder": "^0.1.9",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^7.2",
+        "smalot/pdfparser": "^2.12",
         "spatie/laravel-permission": "^6.21",
+        "spatie/pdf-to-text": "^1.54",
         "tightenco/ziggy": "^2.6"
     },
     "require-dev": {
