--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
-        "laravel-echo": "^2.2.4",
+        "laravel-echo": "^2.2.6",
         "laravel-vite-plugin": "^2.0.1",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
@@ -89,6 +89,7 @@
         "lodash": "^4.17.21",
         "lodash.debounce": "^4.0.8",
         "lucide-react": "^0.475.0",
+        "next-themes": "^0.4.6",
         "number-to-words": "^1.2.4",
         "react": "^19.1.1",
         "react-chartjs-2": "^5.3.0",
@@ -99,7 +100,7 @@
         "react-hook-form": "^7.62.0",
         "react-pro-sidebar": "^1.1.0",
         "react-toastify": "^11.0.5",
-        "recharts": "^3.3.0",
+        "recharts": "^3.5.1",
         "sonner": "^2.0.7",
         "styled-components": "^6.1.19",
         "tailwind-merge": "^3.3.1",
